# tree-sitter-grep

./: .gitattributes  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: main.yml
examples/: filter_before_line_10.rs  filter_before_line_number.rs  filter_function_items_before_line_10.rs  print_match_text.rs
filter_after_line_15/: Cargo.toml
filter_after_line_15/src/: lib.rs
filter_after_line_number/: Cargo.toml
filter_after_line_number/src/: lib.rs
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
src/: args.rs  language.rs  lib.rs  line_buffer.rs  lines.rs  macros.rs  matcher.rs  messages.rs  plugin.rs  project_file_walker.rs  query_context.rs  searcher.rs  sink.rs  treesitter.rs  use_matcher.rs  use_printer.rs  use_searcher.rs
src/matcher/: interpolate.rs  mod.rs
src/printer/: color.rs  counter.rs  mod.rs  standard.rs  stats.rs  util.rs
src/searcher/: core.rs  glue.rs  mmap.rs  mod.rs
src/treesitter/: mod.rs
tests/: languages.rs  output.rs  shared.rs
tests/fixtures/c_project/: example.h
tests/fixtures/cpp_project/: example.cpp
tests/fixtures/csharp_project/: example.cs
tests/fixtures/dockerfile_project/: Dockerfile
tests/fixtures/elisp_project/: example.el
tests/fixtures/elm_project/: example.elm
tests/fixtures/go_project/: example.go
tests/fixtures/html_project/: example.html
tests/fixtures/java_project/: example.java
tests/fixtures/kotlin_project/: example.kt
tests/fixtures/lua_project/: example.lua
tests/fixtures/match_inside_macro/: foo.rs
tests/fixtures/mixed_project/javascript_src/: index.js
tests/fixtures/nested_with_captures_in_reverse_order_wrt_outermost_matching_nodes/: foo.rs  query.scm
tests/fixtures/no_recognized_file_types/: something.scala
tests/fixtures/objective_c_project/: example.h
tests/fixtures/python_project/: example.py
tests/fixtures/ruby_project/: example.rb
tests/fixtures/rust_overlapping/src/: lib.rs
tests/fixtures/rust_overlapping_start_same_line/src/: lib.rs
tests/fixtures/rust_overlapping_with_preceding_lines/src/: lib.rs
tests/fixtures/rust_project/: Cargo.toml
tests/fixtures/rust_project/src/: lib.rs  stop.rs
tests/fixtures/rust_project/ts/: hi.ts
tests/fixtures/rust_project_byte_offset/: Cargo.toml  function-itemz.scm
tests/fixtures/rust_project_byte_offset/src/: lib.rs
tests/fixtures/sorting_maybe_nesting_related/: foo.rs  query.scm
tests/fixtures/swift_project/: example.swift
tests/fixtures/tree_sitter_query_project/: example.scm
tests/fixtures/typescript_project_with_tsx_and_ts/: foo.tsx  hello.ts
tree_sitter_grep/: Cargo.toml
tree_sitter_grep/src/: lib.rs  macros.rs  plugin.rs
tree_sitter_grep/src/treesitter/: mod.rs
tree_sitter_grep_filter_before_line_number/: Cargo.toml
tree_sitter_grep_filter_before_line_number/src/: lib.rs
tree_sitter_grep_plugin_core/: Cargo.toml
tree_sitter_grep_plugin_core/src/: lib.rs
