[package]
name = "tree-sitter-grep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "1.1.0"
bytecount = "0.6"
clap = { version = "4.3.0", features = ["derive"] }
encoding_rs = "0.8.14"
encoding_rs_io = "0.1.6"
ignore = "0.4.20"
libc = "0.2.144"
libloading = "0.8.0"
log = "0.4.5"
memchr = "2.1"
memmap = { package = "memmap2", version = "0.5.3" }
rayon = "1.7.0"
regex = "1.8.2"
serde = { version = "1.0.77", features = ["derive"] }
termcolor = "1.2.0"
tree-sitter = "0.20.10"
tree-sitter-javascript = "0.20.0"
tree-sitter-rust = { git = "https://github.com/helixbass/tree-sitter-rust", rev = "6327788" }
tree-sitter-typescript = "0.20.2"

[lib]
name = "tree_sitter_grep"

[[bin]]
name = "tree-sitter-grep"

[dev-dependencies]
assert_cmd = "2.0.11"
escargot = "0.5.7"
predicates = "3.0.3"
shlex = "1.1.0"

[features]
default = ["bytecount/runtime-dispatch-simd"]

[[example]]
name = "filter_before_line_number"
crate-type = ["cdylib"]

[[example]]
name = "filter_before_line_10"
crate-type = ["cdylib"]

[[example]]
name = "filter_function_items_before_line_10"
crate-type = ["cdylib"]
