[package]
name = "tree-sitter-grep"
version = "0.1.0"
edition = "2021"
license = "Unlicense OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "1.1.0"
bytecount = "0.6"
clap = { version = "4.3.0", features = ["derive"] }
encoding_rs = "0.8.14"
encoding_rs_io = "0.1.6"
ignore = { git = "https://github.com/helixbass/ripgrep", rev = "012f2f1" }
libc = "0.2.144"
libloading = "0.8.0"
log = "0.4.5"
memchr = "2.1"
memmap = { package = "memmap2", version = "0.5.3" }
once_cell = "1.18.0"
proc_macros = { path = "proc_macros" }
rayon = "1.7.0"
regex = "1.8.2"
serde = { version = "1.0.77", features = ["derive"] }
strum_macros = "0.25.1"
termcolor = "1.2.0"
tree-sitter = "0.20.10"
tree-sitter-c = "0.20.2"
tree-sitter-c-sharp = "0.20.0"
tree-sitter-cpp = "0.20.0"
tree-sitter-css = "0.19.0"
tree-sitter-dockerfile = "0.1.0"
tree-sitter-elisp = "1.3.0"
tree-sitter-elm = "5.6.4"
tree-sitter-go = "0.19.1"
tree-sitter-html = "0.19.0"
tree-sitter-java = "0.20.0"
tree-sitter-javascript = "0.20.0"
tree-sitter-json = "0.19.0"
tree-sitter-kotlin = "0.2.11"
tree-sitter-lua = "0.0.18"
tree-sitter-objc = "1.1.0"
tree-sitter-python = "0.20.2"
tree-sitter-query = "0.1.0"
tree-sitter-ruby = "0.20.0"
tree-sitter-rust = { git = "https://github.com/helixbass/tree-sitter-rust", rev = "6327788" }
tree-sitter-swift = "0.3.6"
tree-sitter-toml = "0.20.0"
tree-sitter-typescript = "0.20.2"

[lib]
name = "tree_sitter_grep"

[[bin]]
name = "tree-sitter-grep"

[dev-dependencies]
assert_cmd = "2.0.11"
escargot = "0.5.7"
predicates = "3.0.3"
shlex = "1.1.0"

[features]
default = ["bytecount/runtime-dispatch-simd"]

[[example]]
name = "filter_before_line_number"
crate-type = ["cdylib"]

[[example]]
name = "filter_before_line_10"
crate-type = ["cdylib"]

[[example]]
name = "filter_function_items_before_line_10"
crate-type = ["cdylib"]
