[package]
name = "tree_sitter_grep_proc_macros"
version = "0.1.0"
edition = "2021"
license = "Unlicense OR MIT"
authors = [
  "Julian Rosse <julian@helixbass.net>",
  "Peter Stuart <peter@peterstuart.org>"
]
description = """
(proc-macros used internally by tree-sitter-grep)
"""
homepage = "https://github.com/helixbass/tree-sitter-grep"
repository = "https://github.com/helixbass/tree-sitter-grep"
rust-version = "1.70"

[lib]
proc-macro = true

[dependencies]
Inflector = "0.11.4"
proc-macro2 = "1.0.64"
quote = "1.0.29"
syn = { version = "2.0.25", features = ["full"] }
